@@ -10,7 +10,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/airport")
@@ -46,7 +45,7 @@ public class AirportController {
     @GetMapping("/get/all")
     public ResponseEntity<ApiResponse> findAll(){
         List<AirportDTO> result = airportService.findAll().stream().map(airport -> airportService.mapToDto(airport))
-                .collect(Collectors.toList());
+                .toList();
         ApiResponse apiResponse = new ApiResponse(
                 Boolean.TRUE,
                 "Successfully retrieved all airport",
